--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3105,7 +3105,9 @@ input, select, textarea {
 				#header.alt .logo img {
 					display: block;
 					margin: 0 auto;
-					max-width: 75%;
+					max-width: 100%;
+					width: 100%;
+					height: 100%;
 				}
 
 		@media screen and (max-width: 1280px) {
