--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3056,7 +3056,7 @@ input, select, textarea {
 /* Header */
 
 	#header {
-		padding: 5em 5em 1em 5em ;
+		/*padding: 5em 5em 1em 5em ;*/
 		text-align: center;
 	}
 
