--- a/assets/css/skills.css
+++ b/assets/css/skills.css
@@ -21,3 +21,27 @@
 .java {width: 60%; background-color: #bac2cf;}
 .as {width:75%; background-color:#bac2cf} 
 .py {width:50%; background-color:#bac2cf} 
+
+.arrow {
+  text-align: center;
+  margin: 8% 0;
+  color: white; 
+  text-decoration: none;
+}
+.bounce {
+  -moz-animation: bounce 2s infinite;
+  -webkit-animation: bounce 2s infinite;
+  animation: bounce 2s infinite;
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
+}
