--- a/assets/css/skills.css
+++ b/assets/css/skills.css
@@ -22,11 +22,13 @@
 .as {width:75%; background-color:#bac2cf} 
 .py {width:50%; background-color:#bac2cf} 
 
+a > .bounce {
+color: white; text-decoration: none;
+}
+
 .arrow {
   text-align: center;
   margin: 8% 0;
-  color: white; 
-  text-decoration: none;
 }
 .bounce {
   -moz-animation: bounce 2s infinite;
