--- a/assets/css/skills.css
+++ b/assets/css/skills.css
@@ -4,7 +4,7 @@
 /* Container for skill bars */
 .container {
   width: 100%; /* Full width */
-  background-color: #000; 
+  background-color: #878c94; 
 }
 
 .skills {
