--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1911,7 +1911,7 @@ input, select, textarea {
 	input[type="button"],
 	button,
 	.button {
-		background-color: transparent;
+		/*background-color: transparent;*/
 		box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.35);
 		color: #ffffff !important;
 	}
@@ -1921,7 +1921,7 @@ input, select, textarea {
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			background-color: rgba(255, 255, 255, 0.075);
+			background-color: rgba(0, 0, 0, 0.075);
 		}
 
 		input[type="submit"]:active,
@@ -1929,7 +1929,7 @@ input, select, textarea {
 		input[type="button"]:active,
 		button:active,
 		.button:active {
-			background-color: rgba(255, 255, 255, 0.2);
+			background-color: rgba(0, 0, 0, 0.2);
 		}
 
 		input[type="submit"].icon:before,
@@ -2123,7 +2123,7 @@ input, select, textarea {
 	}
 
 	label {
-		color: #ffffff;
+		color: #000000;
 	}
 
 	input[type="text"],
@@ -2132,7 +2132,7 @@ input, select, textarea {
 	select,
 	textarea {
 		background-color: rgba(255, 255, 255, 0.075);
-		border-color: rgba(255, 255, 255, 0.35);
+		/*border-color: rgba(255, 255, 255, 0.35);*/
 	}
 
 		input[type="text"]:focus,
